--- a/Toudly/Source/Base.lproj/Home.storyboard
+++ b/Toudly/Source/Base.lproj/Home.storyboard
@@ -12,7 +12,7 @@
         <!--Setting View Controller-->
         <scene sceneID="TOe-Eb-aXM">
             <objects>
-                <viewController storyboardIdentifier="SettingViewController" id="EPI-Cb-qw0" customClass="SettingViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingViewController" id="EPI-Cb-qw0" customClass="SettingViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ghW-e4-eLG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -42,27 +42,27 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="SettingTableViewCell" id="8ig-Xa-fhH" customClass="SettingTableViewCell" customModule="Todo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="374" height="34"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="SettingTableViewCell" id="8ig-Xa-fhH" customClass="SettingTableViewCell" customModule="Toudly" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="374" height="34.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8ig-Xa-fhH" id="pVV-oR-DMK">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="34.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jz1-UV-DAP">
-                                                    <rect key="frame" x="0.0" y="7" width="187" height="20"/>
+                                                    <rect key="frame" x="0.0" y="7" width="187" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CMW-gr-HNo">
-                                                    <rect key="frame" x="312" y="6.5" width="42" height="21"/>
+                                                    <rect key="frame" x="312" y="7" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right" translatesAutoresizingMaskIntoConstraints="NO" id="lyi-Xu-6pG">
-                                                    <rect key="frame" x="335.5" y="7.5" width="18.5" height="19"/>
+                                                    <rect key="frame" x="335.5" y="8" width="18.5" height="18.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="lyi-Xu-6pG" secondAttribute="height" id="Rsx-ek-IRH"/>
                                                     </constraints>
@@ -117,7 +117,7 @@
         <!--Alarm Setting View Controller-->
         <scene sceneID="K5A-F8-lYb">
             <objects>
-                <viewController storyboardIdentifier="AlarmSettingViewController" id="tSL-Vt-Vte" customClass="AlarmSettingViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AlarmSettingViewController" id="tSL-Vt-Vte" customClass="AlarmSettingViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QCs-b6-57P">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -175,7 +175,7 @@
         <!--Open Source View Controller-->
         <scene sceneID="nqo-mN-9po">
             <objects>
-                <viewController storyboardIdentifier="OpenSourceViewController" id="UOt-Dt-b09" customClass="OpenSourceViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OpenSourceViewController" id="UOt-Dt-b09" customClass="OpenSourceViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F1b-wX-Ax1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -223,7 +223,7 @@
         <!--Screen Setting View Controller-->
         <scene sceneID="z6f-dZ-K5h">
             <objects>
-                <viewController storyboardIdentifier="ScreenSettingViewController" id="659-Oz-N0A" customClass="ScreenSettingViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScreenSettingViewController" id="659-Oz-N0A" customClass="ScreenSettingViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kEQ-Ls-Maz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -355,7 +355,7 @@
         <!--Todo Manual View Controller-->
         <scene sceneID="JGj-ee-Uy7">
             <objects>
-                <viewController storyboardIdentifier="TodoManualViewController" id="8Or-CZ-ot5" customClass="TodoManualViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TodoManualViewController" id="8Or-CZ-ot5" customClass="TodoManualViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lQg-Gi-zlI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -409,7 +409,7 @@
         <!--Detail View Controller-->
         <scene sceneID="hwE-c2-2vF">
             <objects>
-                <viewController storyboardIdentifier="DetailViewController" id="7Vs-Id-G36" customClass="DetailViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailViewController" id="7Vs-Id-G36" customClass="DetailViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DFo-bi-euJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -483,7 +483,7 @@
         <!--Alarm Detail View Controller-->
         <scene sceneID="HeC-Bd-I7h">
             <objects>
-                <viewController storyboardIdentifier="AlarmDetailViewController" id="7fw-Xv-6kw" customClass="AlarmDetailViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AlarmDetailViewController" id="7fw-Xv-6kw" customClass="AlarmDetailViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cBr-pF-enU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -527,7 +527,7 @@
         <!--Bookmark Detail View Controller-->
         <scene sceneID="lS7-Cl-bwp">
             <objects>
-                <viewController storyboardIdentifier="BookmarkDetailViewController" id="yzv-Fe-Vd2" customClass="BookmarkDetailViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BookmarkDetailViewController" id="yzv-Fe-Vd2" customClass="BookmarkDetailViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VSF-kr-tII">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -571,7 +571,7 @@
         <!--Monthly Detail View Controller-->
         <scene sceneID="5hb-Ei-Ydn">
             <objects>
-                <viewController storyboardIdentifier="MonthlyDetailViewController" id="awM-7V-GsL" customClass="MonthlyDetailViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MonthlyDetailViewController" id="awM-7V-GsL" customClass="MonthlyDetailViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="drV-0k-Stt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -628,7 +628,7 @@
         <!--Search View Controller-->
         <scene sceneID="05U-vc-mfE">
             <objects>
-                <viewController storyboardIdentifier="SearchViewController" id="WV3-Fy-D7T" customClass="SearchViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchViewController" id="WV3-Fy-D7T" customClass="SearchViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="i7O-xS-iNj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -654,7 +654,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" id="mSn-fI-yQF" customClass="SearchTableViewCell" customModule="Todo" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" id="mSn-fI-yQF" customClass="SearchTableViewCell" customModule="Toudly" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="374" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mSn-fI-yQF" id="6VL-Xh-JLK">
@@ -718,7 +718,7 @@
         <!--Main View Controller-->
         <scene sceneID="Mb9-ZR-NBB">
             <objects>
-                <viewController storyboardIdentifier="MainViewController" id="bnR-Uq-4PM" customClass="MainViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainViewController" id="bnR-Uq-4PM" customClass="MainViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3zS-PP-2qs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -881,7 +881,7 @@
         <!--Edit Todo List View Controller-->
         <scene sceneID="U2o-nJ-O40">
             <objects>
-                <viewController storyboardIdentifier="EditTodoListViewController" id="RBF-Ql-3ha" customClass="EditTodoListViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditTodoListViewController" id="RBF-Ql-3ha" customClass="EditTodoListViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nPF-Kt-jkj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1079,7 +1079,7 @@
         <!--Incomplete Detail View Controller-->
         <scene sceneID="8qL-oR-2p1">
             <objects>
-                <viewController storyboardIdentifier="IncompleteDetailViewController" id="Baw-fi-NuM" customClass="IncompleteDetailViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="IncompleteDetailViewController" id="Baw-fi-NuM" customClass="IncompleteDetailViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jUW-tx-HNi">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1123,7 +1123,7 @@
         <!--Completed Detail View Controller-->
         <scene sceneID="c1I-gw-Cxa">
             <objects>
-                <viewController storyboardIdentifier="CompletedDetailViewController" id="sqb-JJ-Meo" customClass="CompletedDetailViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CompletedDetailViewController" id="sqb-JJ-Meo" customClass="CompletedDetailViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1Va-yB-qWR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1167,7 +1167,7 @@
         <!--Data Setting View Controller-->
         <scene sceneID="3Se-KF-7ri">
             <objects>
-                <viewController storyboardIdentifier="DataSettingViewController" id="wiI-dB-Zlh" customClass="DataSettingViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DataSettingViewController" id="wiI-dB-Zlh" customClass="DataSettingViewController" customModule="Toudly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a13-AY-DuC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
