--- a/Toudly/Source/Setting/SettingDetailTableViewCell.xib
+++ b/Toudly/Source/Setting/SettingDetailTableViewCell.xib
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="101" id="KGk-i7-Jjw" customClass="SettingDetailTableViewCell" customModule="Todo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="101" id="KGk-i7-Jjw" customClass="SettingDetailTableViewCell" customModule="Toudly" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="426" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5a-Cs-K8k">
-                        <rect key="frame" x="0.0" y="40" width="213" height="21"/>
+                        <rect key="frame" x="0.0" y="40" width="341" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -29,7 +30,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="f5a-Cs-K8k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KtF-M5-iyc"/>
-                    <constraint firstItem="f5a-Cs-K8k" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.5" id="NFn-qN-JOJ"/>
+                    <constraint firstItem="f5a-Cs-K8k" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.8" id="NFn-qN-JOJ"/>
                     <constraint firstItem="f5a-Cs-K8k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Wt4-KJ-Ndw"/>
                     <constraint firstAttribute="trailing" secondItem="MMb-qp-gwK" secondAttribute="trailing" id="oye-Ev-i2a"/>
                     <constraint firstItem="MMb-qp-gwK" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zFa-n0-LbH"/>
